@@ -188,6 +188,8 @@ Bug fixes:
   (Gabriel Scherer and Mark Shinwell and Xavier Leroy)
 - GPR#233: Make CamlinternalMod.init_mod robust to optimization
   (Pierre Chambart, Mark Shinwell)
+- GPR#251: fix cross-compilation with ocamldoc enabled
+  (whitequark)
 
 Features wishes:
 - PR#4714: List.cons
